--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "Fast tool for checking if an IP is contained within a list of CIDRs/IPs",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ahfriedman/fast-cidr-match"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
